--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,5 @@
-
+node {
+  def response = httpRequest 'http://localhost:22890'
+  println("Status: "+response.status)
+  println("Content: "+response.content)
+}
